--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ body, html {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
-  <a href="#citadel" onclick="w3_close()" class="w3-bar-item w3-button">THE CITADEL</a>
+  <a href="#citadel" class="w3-bar-item w3-button">THE CITADEL</a>
       <a href="#assets" class="w3-bar-item w3-button"> ASSETS</a>
       <a href="#countdown" class="w3-bar-item w3-button"> COUNTDOWN</a>
      
@@ -114,10 +114,9 @@ body, html {
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
   <a href="#citadel" onclick="w3_close()" class="w3-bar-item w3-button">THE CITADEL</a>
-  <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">WORK</a>
-  <a href="#pricing" onclick="w3_close()" class="w3-bar-item w3-button">PRICING</a>
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
-</nav>
+  <a href="#assets" onclick="w3_close()" class="w3-bar-item w3-button">ASSETS</a>
+  <a href="#countdown" onclick="w3_close()" class="w3-bar-item w3-button">COUNTDOWN</a>
+  </nav>
 
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
