--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ body, html {
       <p><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/103401538517270522223033525416141259959370877636677886391561608480461114310657"><button class="button1" style="vertical-align:middle"><span>BUY</span></button></a></p><br><br>
     </div>
   </div>
-  <div class="w3-center"><a href="https://opensea.io/collection/anure"><button class="button" style="vertical-align:middle"><span>See More</span></button></a></div>
+  <div class="w3-center"><a href="https://opensea.io/collection/anur3"><button class="button" style="vertical-align:middle"><span>See More</span></button></a></div>
 
 </div>
 
