--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
 <title>ANUR3</title>
 <meta charset="UTF-8">
+<link href="http://fonts.cdnfonts.com/css/ocr-a-extended" rel="stylesheet">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -10,9 +12,18 @@
 <link rel="icon" href="hex1.png">
 
 <style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+
+
+@import url('http://fonts.cdnfonts.com/css/ocr-a-extended');
+
+
+body,h1,h2,h3,h4,h5,h6 {font-family: "OCR A Extended", sans-serif}
+
+
 
 body, html {
+  font-weight: 700;
+
   height: 100%;
   line-height: 1.8;
 }
@@ -118,6 +129,10 @@ body, html {
   opacity: 1;
   right: 0;
 }
+
+
+
+
 </style>
 <body>
 
@@ -125,31 +140,17 @@ body, html {
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
     <!--<a href="#home" class="w3-bar-item w3-button w3-wide">ANURE</a> -->
-	<img class="w3-image w3-round-large" src="logo3w.gif" alt="LOGO" width="100" height="100">
-    <!-- Right-sided navbar links -->
-    <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
-  <a href="#citadel" class="w3-bar-item w3-button">THE CITADEL</a>
-      <a href="#assets" class="w3-bar-item w3-button"> ASSETS</a>
-      <a href="#countdown" class="w3-bar-item w3-button"> COUNTDOWN</a>
+	<img class="w3-image w3-center w3-round-large" src="logo3w.gif" alt="LOGO" width="100" height="100">
+    
+	<div class="w3-right">
+      <a href="https://opensea.io/collection/anur3" class="w3-bar-item w3-button"><img src="opensealogo.png" alt="OPENSEA" width="100" height=""></a>
+  
      
     </div>
-    <!-- Hide right-floated links on small screens and replace them with a menu icon -->
-
-    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
-      <i class="fa fa-bars"></i>
-    </a>
   </div>
 </div>
 
-<!-- Sidebar on small screens when clicking the menu icon -->
-<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
-  <a href="#citadel" onclick="w3_close()" class="w3-bar-item w3-button">THE CITADEL</a>
-  <a href="#assets" onclick="w3_close()" class="w3-bar-item w3-button">ASSETS</a>
-  <a href="#countdown" onclick="w3_close()" class="w3-bar-item w3-button">COUNTDOWN</a>
-  </nav>
+
 
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
@@ -260,7 +261,7 @@ body, html {
       <p><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/103401538517270522223033525416141259959370877636677886391561608480461114310657"><button class="button1" style="vertical-align:middle"><span>BUY</span></button></a></p><br><br>
     </div>
   </div>
-  <div class="w3-center"><a href="https://opensea.io/collection/anur3"><button class="button" style="vertical-align:middle"><span>See More</span></button></a></div>
+  <div class="w3-center"><a href="https://opensea.io/collection/anure"><button class="button" style="vertical-align:middle"><span>See More</span></button></a></div>
 
 </div>
 
