--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ body, html {
 
 
 <!-- ASSETS -->
-<div class="w3-container" style="padding:128px 100px" id="assets">
+<div class="w3-container" style="padding:128px 50px" id="assets">
   <h3 class="w3-center">ASSETS</h3>
   
   <div class="w3-row-padding w3-center" style="margin-top:40px">
@@ -260,7 +260,9 @@ body, html {
       <p><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/103401538517270522223033525416141259959370877636677886391561608480461114310657"><button class="button1" style="vertical-align:middle"><span>BUY</span></button></a></p><br><br>
     </div>
   </div>
-  <div class="w3-center"><a href="https://opensea.io/collection/anure"><button class="button" style="vertical-align:middle"><span>See More</span></button></a></div>
+  <div class="w3-center"><a href="https://opensea.io/collection/anure"><button class="button" ><span>See More</span></button></a></div>
+<br><br><br>
+
 
 </div>
 
@@ -270,21 +272,24 @@ body, html {
 
 	
 	
-    <!-- countdown -->
-	
-	<div style="text-align:center;font-size:30px;padding-top:50px" ID="countdown">Release date: 17 dec 2023</div>
-	<div style="text-align:center;font-size:30px;padding-top:20px" ID="countdown">Countdown:</div>
-
-<div id="demo" style="text-align:center;font-size:30px;padding-bottom:70px;"></div>
-<br><br><br><br><br>
+  
 
 
-
-  </div>
-</div>
-
+  
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
+
+
+  <!-- countdown -->
+	
+	<div style="text-align:center;font-size:30px;padding:10px" ID="countdown">Release date: 17 dec 2023</div>
+	<div style="text-align:center;font-size:30px;padding:10px" ID="countdown">Countdown:</div>
+
+<div id="demo" style="text-align:center;font-size:25px;padding-bottom:50px;"></div>
+
+
+
+
   <div class="w3-xlarge w3-section">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
