--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body, html {
 .bgimg-2 {
   background-position: center;
   background-size: cover;
-  background-image: url("citadel3.png");
+  background-image: url("citadel3.jpg");
   min-height: 100%;
 }
 
