--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ body, html {
 .bgimg-2 {
   background-position: center;
   background-size: cover;
-  background-image: url("citadel3.jpg");
-  min-height: 100%;
+    background-color:black;
+
 }
 
 .w3-bar .w3-button {
@@ -215,7 +215,7 @@ body, html {
 <!-- the citadel -->
 
 <header class="bgimg-2 w3-display-container w3-grayscale-min" id="citadel">
-  <div class="w3-display-bottomleft w3-text-white" style="padding:30px 30px">
+  <div class="w3-center w3-black  w3-text-white" style="padding-bottom:200px;padding-top:200px">
     <span class="w3-jumbo w3-hide-small">The Citadel</span>
 	    <span class="w3-xxlarge w3-hide-large w3-hide-medium" >The Citadel</span><br>
 
