--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>ANUR3</title>
 <meta charset="UTF-8">
 <link href="http://fonts.cdnfonts.com/css/ocr-a-extended" rel="stylesheet">
-
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -134,6 +134,10 @@ body, html {
  
 }
 
+
+
+
+
 </style>
 <body>
 
@@ -155,7 +159,7 @@ body, html {
 
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
-
+<div data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
 <span class="w3-hide-small">
 <video autoplay muted loop id="myVideo">
   <source src="mclaren video.mp4" type="video/mp4">
@@ -177,29 +181,29 @@ body, html {
 	<span class="w3-xlarge">Step into a new world</span>
 	 </div> 
 
-</header>
+</header></div>
 
 <!-- About Section -->
-<div class="w3-container" style="padding:100px 50px" id="about">
-  <h3 class="w3-center">ABOUT ANURE</h3>
+<div class="w3-container " style="padding:100px 50px" id="about">
+  <h3 class="w3-center" data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">ABOUT ANURE</h3>
   
   <div class="w3-row-padding w3-center" style="margin-top:40px">
-    <div class="w3-quarter">
-      <i class=" w3-margin-bottom w3-jumbo w3-center">	<img class="w3-image w3-round-large" src="vrheadset.png" alt="LOGO" width="200" height="200"></i>
-      <p class="w3-large">VR ready</p>
+    <div class="w3-quarter" data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
+      <i class=" w3-margin-bottom w3-jumbo w3-center ">	<img class="w3-image w3-round-large" src="vrheadset.png" alt="LOGO" width="200" height="200"></i>
+      <p class="w3-large ">VR ready</p>
       <p>Open your eyes and enter a more engaging and satisfying experience with a vr headset.</p><br><br>
     </div>
-    <div class="w3-quarter">
+    <div class="w3-quarter" data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
       <i class=" w3-margin-bottom w3-jumbo">	<img class="w3-image w3-round-large" src="nft.png" alt="LOGO" width="200" height="200"></i>
       <p class="w3-large">NFT based</p>
       <p>Enter an NFT based world, where you can easily buy and sell anything: land, avatars, cars, and many others.</p><br><br>
     </div>
-    <div class="w3-quarter">
+    <div class="w3-quarter" data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
       <i class=" w3-margin-bottom w3-jumbo">	<img class="w3-image w3-round-large" src="avatar.png" alt="LOGO" width="200" height="200"></i>
       <p class="w3-large">The Avatar</p>
       <p>Your Avatar represents who you really are, so choose freely from animated characters to metahumans.</p><br><br>
     </div>
-    <div class="w3-quarter">
+    <div class="w3-quarter" data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
       <i class=" w3-margin-bottom w3-jumbo">	<img class="w3-image w3-round-large" src="ue.png" alt="LOGO" width="200" height="200"></i>
       <p class="w3-large">Unreal Engine </p>
       <p>Built and developed with unreal engine.</p><br><br>
@@ -213,72 +217,72 @@ body, html {
 
 
 <!-- the citadel -->
-
+<div data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
 <header class="bgimg-2 w3-display-container w3-grayscale-min" id="citadel">
   <div class="w3-center w3-black  w3-text-white" style="padding-bottom:200px;padding-top:200px">
-    <span class="w3-jumbo w3-hide-small">The Citadel</span>
-	    <span class="w3-xxlarge w3-hide-large w3-hide-medium" >The Citadel</span><br>
+    <span class="w3-jumbo w3-hide-small ">The Citadel</span>
+	    <span class="w3-xxlarge w3-hide-large w3-hide-medium " >The Citadel</span><br>
 
-	<span class="w3-xlarge">The center of this world is The Citadel, a place where you can find everything you need.
+	<span class="w3-xlarge ">The center of this world is The Citadel, a place where you can find everything you need.
 <br>Divided into 37 sectors, each one is also divided into 37 pieces of land<br> that can be bought or sold trough NFTs.
 </span>
     
   </div> 
   
-</header>
+</header><div>
 
 
 
 
 <!-- ASSETS -->
 <div class="w3-container" style="padding:128px 50px" id="assets">
-  <h3 class="w3-center">ASSETS</h3>
+  <h3 class="w3-center"  data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">ASSETS</h3>
   
   <div class="w3-row-padding w3-center" style="margin-top:40px">
-    <div class="w3-quarter">
+    <div class="w3-quarter" data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
       <i class=" w3-margin-bottom w3-jumbo w3-center">	<img class="w3-image w3-round-large" src="land1.gif" alt="land1" width="200" height="200"></i>
       <p class="w3-large">Sector #1 Land #1</p>
       <p><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/103401538517270522223033525416141259959370877636677886391561608478262091055105"><button class="button1" style="vertical-align:middle"><span>BUY</span></button></a></p><br><br>
     </div>
-    <div class="w3-quarter">
+    <div class="w3-quarter" data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
       <i class=" w3-margin-bottom w3-jumbo">	<img class="w3-image w3-round-large" src="land2.gif" alt="LOGO" width="200" height="200"></i>
       <p class="w3-large">Sector #1 Land #2</p>
       <p><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/103401538517270522223033525416141259959370877636677886391561608479361602682881"><button class="button1" style="vertical-align:middle"><span>BUY</span></button></a></p><br><br>
     </div>
-    <div class="w3-quarter">
+    <div class="w3-quarter" data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
       <i class=" w3-margin-bottom w3-jumbo">	<img class="w3-image w3-round-large" src="land3.gif" alt="LOGO" width="200" height="200"></i>
       <p class="w3-large">Sector #1 Land #3</p>
       <p><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/103401538517270522223033525416141259959370877636677886391561608481560625938433"><button class="button1" style="vertical-align:middle"><span>BUY</span></button></a></p><br><br>
     </div>
-    <div class="w3-quarter">
+    <div class="w3-quarter" data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
       <i class=" w3-margin-bottom w3-jumbo">	<img class="w3-image w3-round-large" src="land4.gif" alt="LOGO" width="200" height="200"></i>
       <p class="w3-large">Sector #1 Land #4</p>
       <p><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/103401538517270522223033525416141259959370877636677886391561608484859160821761"><button class="button1" style="vertical-align:middle"><span>BUY</span></button></a></p><br><br>
     </div>
   </div>
   <div class="w3-row-padding w3-center" style="margin-top:0px">
-    <div class="w3-quarter">
+    <div class="w3-quarter" data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
       <i class=" w3-margin-bottom w3-jumbo w3-center">	<img class="w3-image w3-round-large" src="land34.gif" alt="land1" width="200" height="200"></i>
       <p class="w3-large">Sector #37 Land #34</p>
       <p><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/103401538517270522223033525416141259959370877636677886391561608485958672449537"><button class="button1" style="vertical-align:middle"><span>BUY</span></button></a></p><br><br>
     </div>
-    <div class="w3-quarter">
+    <div class="w3-quarter" data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
       <i class=" w3-margin-bottom w3-jumbo">	<img class="w3-image w3-round-large" src="land35.gif" alt="LOGO" width="200" height="200"></i>
       <p class="w3-large">Sector #37 Land #35</p>
       <p><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/103401538517270522223033525416141259959370877636677886391561608483759649193985"><button class="button1" style="vertical-align:middle"><span>BUY</span></button></a></p><br><br>
     </div>
-    <div class="w3-quarter">
+    <div class="w3-quarter" data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
       <i class=" w3-margin-bottom w3-jumbo">	<img class="w3-image w3-round-large" src="land36.gif" alt="LOGO" width="200" height="200"></i>
       <p class="w3-large">Sector #37 Land #36</p>
       <p><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/103401538517270522223033525416141259959370877636677886391561608482660137566209"><button class="button1" style="vertical-align:middle"><span>BUY</span></button></a></p><br><br>
     </div>
-    <div class="w3-quarter">
+    <div class="w3-quarter" data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
       <i class=" w3-margin-bottom w3-jumbo">	<img class="w3-image w3-round-large" src="land37.gif" alt="LOGO" width="200" height="200"></i>
       <p class="w3-large">Sector #37 Land #37</p>
       <p><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/103401538517270522223033525416141259959370877636677886391561608480461114310657"><button class="button1" style="vertical-align:middle"><span>BUY</span></button></a></p><br><br>
     </div>
   </div>
-  <div class="w3-center"><a href="https://opensea.io/collection/anure"><button class="button" ><span>See More</span></button></a></div>
+  <div class="w3-center"  data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000"><a href="https://opensea.io/collection/anure"><button class="button" ><span>See More</span></button></a></div>
 <br><br><br>
 
 
@@ -295,7 +299,7 @@ body, html {
 
   
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-64">
+<footer class="w3-center w3-black w3-padding-64"  data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
 
 
   <!-- countdown -->
@@ -380,6 +384,15 @@ function w3_close() {
     mySidebar.style.display = "none";
 }
 </script>
+
+
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+
+
 
 </body>
 </html>
