--- a/index.html
+++ b/index.html
@@ -379,10 +379,9 @@ body, html {
 
 
   <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-youtube w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <a href="https://www.instagram.com/mirk.nft/?hl=en"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+     <a href=""><i class="fa fa-youtube w3-hover-opacity"></i></a>
+     <a href="https://twitter.com/Mirk_nft"><i class="fa fa-twitter w3-hover-opacity"></i></a>
 	
   </div>
   <p>&copy; ANUR3</p>
