--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <title>ANUR3</title>
 <meta charset="UTF-8">
-<link href="http://fonts.cdnfonts.com/css/ocr-a-extended" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -159,7 +158,6 @@ body, html {
 
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
-<div data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
 <span class="w3-hide-small">
 <video autoplay muted loop id="myVideo">
   <source src="mclaren video.mp4" type="video/mp4">
@@ -181,7 +179,7 @@ body, html {
 	<span class="w3-xlarge">Step into a new world</span>
 	 </div> 
 
-</header></div>
+</header>
 
 <!-- About Section -->
 <div class="w3-container " style="padding:100px 50px" id="about">
@@ -220,7 +218,7 @@ body, html {
 <!-- the citadel -->
 <div data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
 <header class="bgimg-2 w3-display-container w3-grayscale-min" id="citadel">
-  <div class="w3-center w3-black  w3-text-white" style="padding-bottom:200px;padding-top:200px">
+  <div class="w3-center w3-black  w3-text-white" style="padding-bottom:200px;padding-top:200px;padding-right:50px;padding-left:50px;">
     <span class="w3-jumbo w3-hide-small ">The Citadel</span>
 	    <span class="w3-xxlarge w3-hide-large w3-hide-medium " >The Citadel</span><br>
 
@@ -230,7 +228,7 @@ body, html {
     
   </div> 
   
-</header><div>
+</header>
 
 
 
@@ -342,7 +340,7 @@ body, html {
 <!-- free to play -->
 <div data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
 <header class="bgimg-2 w3-display-container w3-grayscale-min" id="play">
-  <div class="w3-center w3-black  w3-text-white" style="padding-bottom:200px;padding-top:200px">
+  <div class="w3-center w3-black  w3-text-white" style="padding-bottom:200px;padding-top:200px;padding-right:50px;padding-left:50px;">
     <span class="w3-jumbo w3-hide-small ">FREE TO PLAY</span>
 	    <span class="w3-xxlarge w3-hide-large w3-hide-medium " >FREE TO PLAY</span><br>
 
@@ -356,7 +354,7 @@ body, html {
 	<!-- creator account -->
 <div data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
 <header class="bgimg-2 w3-display-container w3-grayscale-min" id="creator">
-  <div class="w3-center w3-white  w3-text-black" style="padding-bottom:200px;padding-top:200px">
+  <div class="w3-center w3-white  w3-text-black" style="padding-bottom:200px;padding-top:200px;padding-right:50px;padding-left:50px;">
     <span class="w3-jumbo w3-hide-small ">Creator Account</span>
 	    <span class="w3-xxlarge w3-hide-large w3-hide-medium " >Creator Account</span><br>
 
@@ -375,7 +373,7 @@ body, html {
 	<!-- creator account -->
 <div data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
 <header class="bgimg-2 w3-display-container w3-grayscale-min" id="creator">
-  <div class="w3-center w3-black  w3-text-white" style="padding-bottom:200px;padding-top:200px">
+  <div class="w3-center w3-black  w3-text-white" style="padding-bottom:200px;padding-top:200px;padding-right:50px;padding-left:50px;">
   
   <div style="text-align:center;font-size:25px;" ><img src="logo.png" style="width:200px;"></div>
     <span class="w3-jumbo w3-hide-small ">The Creator</span>
@@ -392,7 +390,7 @@ body, html {
 <!-- heleon353 -->
 <div data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
 <header class="bgimg-2 w3-display-container w3-grayscale-min" id="heleon353">
-  <div class="w3-center w3-white  w3-text-black" style="padding-bottom:200px;padding-top:200px">
+  <div class="w3-center w3-white  w3-text-black" style="padding-bottom:200px;padding-top:200px;padding-right:50px;padding-left:50px;">
     <span class="w3-jumbo w3-hide-small ">HELEON 353</span>
 	    <span class="w3-xxlarge w3-hide-large w3-hide-medium " >HELEON353</span><br>
 
