--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ body, html {
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
     <!--<a href="#home" class="w3-bar-item w3-button w3-wide">ANURE</a> -->
-	<img class="w3-image w3-center w3-round-large" src="logo3w.gif" alt="LOGO" width="100" height="100">
+	<img class="w3-image w3-center w3-round-large" src="logo3w.gif" alt="anur3" width="100" height="100">
     
 	<div class="w3-right">
       <a href="https://opensea.io/collection/anur3" class="w3-bar-item w3-button"><img src="opensealogo.png" alt="OPENSEA" width="100" height=""></a>
