--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <title>ANUR3</title>
+<meta name="description" content="Anur3 is a NFT based platform built for the Metaverse">
+
 <meta charset="UTF-8">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
