--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>ANUR3</title>
-<meta name="description" content="Anur3 is a NFT based platform built for the Metaverse">
+<meta name="description" content="ANUR3 is an NFT based world, where you can easily buy and sell anything: land, avatars, cars, and many others. The ANUR3 metaverse include a map made up of 1.369 lands. Land owners can host contests and events, customize assets, monetize assets, and more! Trade the collection and keep your eyes peeled for future drops.">
 
 <meta charset="UTF-8">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -32,7 +32,7 @@ body, html {
   background-position: center;
   background-size: cover;
   background-color:black;
- min-height:100%;
+
 }
 
 .bgimg-2 {
@@ -161,30 +161,35 @@ body, html {
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
 <span class="w3-hide-small">
-<video autoplay muted loop id="myVideo">
-  <source src="mclaren video.mp4" type="video/mp4">
-  Your browser does not support HTML5 video.
-</video>
+<img src="wallpaper.jpg" width="100%">
 </span>
 
 <span class="w3-hide-large">
-<video autoplay muted loop id="myVideo">
-  <source src="mclaren video_phone.mp4" type="video/mp4">
-  Your browser does not support HTML5 video.
-</video>
+<img src="wallpaper1.jpg" width="100%">
+
 </span>
 
-  <div class="w3-display-bottomleft w3-text-white" style="padding:30px 30px">
-    <span class="w3-jumbo w3-hide-small">Join the Metaverse</span>
-	    <span class="w3-xxlarge w3-hide-large w3-hide-medium" >Join the Metaverse</span><br>
-
-	<span class="w3-xlarge">Step into a new world</span>
-	 </div> 
-
+  
 </header>
 
 
 
+<!-- ANUR3 -->
+<div data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
+<header class="bgimg-2 w3-display-container w3-grayscale-min" id="citadel">
+  <div class="w3-center w3-black  w3-text-white" style="padding-bottom:200px;padding-top:200px;padding-right:30px;padding-left:30px;">
+    <span class="w3-jumbo w3-hide-small ">ANUR3</span>
+	    <span class="w3-xxlarge w3-hide-large w3-hide-medium " >ANUR3</span><br>
+
+	<span class="w3-xlarge ">ANUR3 is an NFT based world, where you can easily buy and sell anything: land, avatars, cars, and many others.<br>
+	The ANUR3 metaverse include a map made up of 1.369 lands.<br>
+	Land owners can host contests and events, customize assets, monetize assets, and more!<br>
+	Trade the collection and keep your eyes peeled for future drops.
+</span>
+    
+  </div> 
+  
+</header>
 
 
 <!-- Assets -->
@@ -290,10 +295,14 @@ body, html {
 
 
 
+
+
+
+
 <!-- the citadel -->
 <div data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
 <header class="bgimg-2 w3-display-container w3-grayscale-min" id="citadel">
-  <div class="w3-center w3-black  w3-text-white" style="padding-bottom:200px;padding-top:200px;padding-right:50px;padding-left:50px;">
+  <div class="w3-center w3-black  w3-text-white" style="padding-bottom:200px;padding-top:200px;padding-right:30px;padding-left:30px;">
     <span class="w3-jumbo w3-hide-small ">The Citadel</span>
 	    <span class="w3-xxlarge w3-hide-large w3-hide-medium " >The Citadel</span><br>
 
@@ -314,7 +323,7 @@ body, html {
 <!-- free to play -->
 <div data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
 <header class="bgimg-2 w3-display-container w3-grayscale-min" id="play">
-  <div class="w3-center w3-white  w3-text-black" style="padding-bottom:200px;padding-top:200px;padding-right:50px;padding-left:50px;">
+  <div class="w3-center w3-white  w3-text-black" style="padding-bottom:200px;padding-top:200px;padding-right:30px;padding-left:30px;">
     <span class="w3-jumbo w3-hide-small ">FREE TO PLAY</span>
 	    <span class="w3-xxlarge w3-hide-large w3-hide-medium " >FREE TO PLAY</span><br>
 
@@ -328,11 +337,11 @@ body, html {
 	<!-- creator account -->
 <div data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
 <header class="bgimg-2 w3-display-container w3-grayscale-min" id="creator">
-  <div class="w3-center w3-black  w3-text-white" style="padding-bottom:200px;padding-top:200px;padding-right:50px;padding-left:50px;">
+  <div class="w3-center w3-black  w3-text-white" style="padding-bottom:200px;padding-top:200px;padding-right:30px;padding-left:30px;">
     <span class="w3-jumbo w3-hide-small ">Creator Account</span>
 	    <span class="w3-xxlarge w3-hide-large w3-hide-medium " >Creator Account</span><br>
 
-	<span class="w3-xlarge ">This is one of the many ways you can make money using this platform.<br>Buy a piece of land and become a creator.<br> Make money with your art.
+	<span class="w3-xlarge ">This is one of the many ways you can make money using this platform.<br>Own a piece of land and become a creator.<br> Make money with your art.
     
   </div> 
   
@@ -351,7 +360,7 @@ body, html {
 <!-- heleon353 -->
 <div data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
 <header class="bgimg-2 w3-display-container w3-grayscale-min" id="heleon353">
-  <div class="w3-center w3-white  w3-text-black" style="padding-bottom:200px;padding-top:200px;padding-right:50px;padding-left:50px;">
+  <div class="w3-center w3-white  w3-text-black" style="padding-bottom:200px;padding-top:200px;padding-right:30px;padding-left:30px;">
     <span class="w3-jumbo w3-hide-small ">HELEON 353</span>
 	    <span class="w3-xxlarge w3-hide-large w3-hide-medium " >HELEON353</span><br>
 
