--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ margin-right:40%;
 body, html {
 
   font-weight: 500;
-
+margin-right:-0px;
   height: 100%;
   line-height: 1.8;
 }
@@ -284,8 +284,8 @@ min-height:100%;
 
 
 <!-- Prices-->
-  <div class="w3-row-padding" id="pricing" style="margin-left:20%;margin-right:20%;margin-top:200px;margin-bottom:200px;">
-    <div class="w3-center w3-padding-64">
+  <div class="w3-row-padding" id="pricing" style="margin-left:10%;margin-right:10%;margin-top:200px;margin-bottom:200px;">
+    <div class="w3-center w3-padding-24">
       <h2>PRICING PLANS</h2>
       <p>Choose a pricing plan that fits your needs.</p>
     </div>
