--- a/index.html
+++ b/index.html
@@ -195,6 +195,28 @@ min-height:100%;
 
 
 
+<!-- ANUR3 -->
+<div data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
+<header class="bgimg-2 w3-display-container w3-grayscale-min" id="about">
+  <div class="w3-center w3-white  w3-text-black" style="padding-bottom:500px;padding-top:400px;padding-right:30px;padding-left:30px;">
+    <span class="w3-jumbo w3-hide-small " data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">ANUR3</span>
+	    <span class="w3-xxlarge w3-hide-large w3-hide-medium " data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">ANUR3</span><br>
+
+	<span class="w3-xlarge " data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">We are ANUR3 - a modern digital marketing agency from Bucharest.<br>
+	We will help you unlock your full potential with our services such as<br> creating modern websites,
+	SEO, PPC, creating a brand, getting seen<br> and heard by your potential customers, and much more.<br>
+</span>
+    
+  </div> 
+  
+</header>
+  
+  
+  
+  
+  
+  
+  
 
 
  <script>
