--- a/index.html
+++ b/index.html
@@ -212,6 +212,73 @@ min-height:100%;
 </header>
   
   
+<!-- what we offer -->
+<div data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
+<header class="bgimg-2 w3-display-container w3-grayscale-min" id="work">
+  <div class="w3-center w3-black  w3-text-white" style="padding-bottom:300px;padding-top:100px;padding-right:30px;padding-left:30px;">
+     <!-- Grid -->
+  <div class="w3-row w3-container">
+    <div class="w3-center w3-padding-64">
+      <span class="w3-xlarge w3-bottombar w3-border-white	  w3-padding-16">What We Offer</span>
+    </div>
+    <div class="w3-col l3 m6 w3-black w3-container w3-padding-16">
+      <h3 >PERFORMANCE</h3>
+	  <hr>
+      <p>Gaining trust is just one step. We have a constant concern to discover new technologies, so as to help our customers to be more competitive, and to us, more valuable.</p>
+    </div>
+
+    <div class="w3-col l3 m6 w3-black w3-container w3-padding-16">
+      <h3>FLEXIBILITY</h3>
+	  <hr>
+      <p>In such a dynamic industry as software, we manage to adapt our services and especially the prices according to the client's needs. We manage to find optimal and efficient solutions for any problem.</p>
+    </div>
+
+    <div class="w3-col l3 m6 w3-black w3-container w3-padding-16">
+      <h3>INNOVATION</h3>
+	  <hr>
+      <p>We are part of a dynamic industry, where we are obliged to keep up with technology and its trends. In order to offer the best services, we must be one step ahead of the others. We innovate through continuous learning.</p>
+    </div>
+
+    <div class="w3-col l3 m6 w3-black w3-container w3-padding-16">
+      <h3>SIMPLICITY</h3>
+	  <hr>
+      <p>We make software products that focus on human interaction, and our products become simple and intuitive to use.</p>
+    </div>
+
+  </div>
+  
+       <!-- Grid -->
+  <div class="w3-row w3-container w3-padding-20" >
+    
+    <div class="w3-col l3 m6 w3-black w3-container w3-padding-16">
+      <h3>DESIGN</h3>
+	  <hr>
+      <p>We know that exceptional website experiences are a blend of the right message and the right technology. That's why our interactive design approach focuses on usability, accessibility impact, and achieving results.</p>
+    </div>
+
+    <div class="w3-col l3 m6 w3-black w3-container w3-padding-16">
+      <h3>BRANDING</h3>
+	  <hr>
+      <p>A brand is what you believe in. What you stand for. Whether a new or established business or organization, you can look to us to best articulate who you are, what you do, and most importantly, why any of it matters.</p>
+    </div>
+
+    <div class="w3-col l3 m6 w3-black w3-container w3-padding-16">
+      <h3>CONSULTATION</h3>
+	  <hr>
+      <p>In order to build a memorable brand experience, our process starts with research. This critical component to our work uncovers opportunities that shape how audiences interact with your organization.</p>
+    </div>
+
+    <div class="w3-col l3 m6 w3-black w3-container w3-padding-16">
+      <h3>PROMISES</h3>
+	  <hr>
+      <p>Design extends far beyond the screen and page. Everything is designed, from the way you navigate a space to the way you interact with your customers. A compelling brand considers all aspects of experience, and we’ve got the tools necessary to help you think through the details.</p>
+    </div>
+
+  </div>
+    
+  </div> 
+  
+</header>
   
   
   
