--- a/index.html
+++ b/index.html
@@ -337,7 +337,107 @@ min-height:100%;
   </div>
 
 
+   
+<!-- Footer -->
+<footer class=" w3-black w3-padding-64" id="contact"  data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
+
+
+
+
+
+
+
+
+    <div class="w3-row-padding w3-hide-large "  style="margin:0 -16px">
+      <div class="w3-half w3-margin-bottom">
+        <ul class="w3-ul w3-black w3-left " style="padding-left:50px; padding-right:0px;" >
+          <h2 class="w3-text-light-grey">Contact Us</h2>
+    
+
+    <div class="w3-section">
+      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Bucharest, Romania</p>
+      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +40753753405</p>
+      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: anur3contact@gmail.com</p>
+    </div><br>
+        </ul>
+      </div>
+
+      <div class="w3-half">
+        <ul class="w3-ul w3-black w3-center " style="padding-left:50px; padding-right:50px;">
+          <p>Let's get in touch. Send me a message:</p>
+<form action="https://formsubmit.co/anur3contact@gmail.com" method="POST">
+<input type="hidden" name="_captcha" value="false">
+
+
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
+      <p><input class="w3-input w3-padding-16" type="email" placeholder="Email" required name="Email"></p>
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
+      <p>
+        <button class="w3-button w3-light-grey w3-padding-large" type="submit">
+          <i class="fa fa-paper-plane"></i> SEND MESSAGE
+        </button>
+      </p>
+    </form>
+        </ul>
+      </div>
+    <!-- End Grid/Pricing tables -->
+  </div>
+	
+	<div class="w3-row-padding w3-hide-small w3-hide-medium "  style="margin:0 -16px">
+      <div class="w3-half w3-margin-bottom">
+        <ul class="w3-ul w3-black w3-left " style="padding-left:30%; padding-right:0px;" >
+          <h2 class="w3-text-light-grey">Contact Us</h2>
+    
+
+    <div class="w3-section">
+      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Bucharest, Romania</p>
+      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +40753753405</p>
+      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: anur3contact@gmail.com</p>
+    </div><br>
+        </ul>
+      </div>
+
+      <div class="w3-half">
+        <ul class="w3-ul w3-black w3-center " style="padding-left:0px; padding-right:30%;">
+          <p>Let's get in touch. Send me a message:</p>
+<form action="https://formsubmit.co/anur3contact@gmail.com" method="POST">
+<input type="hidden" name="_captcha" value="false">
+
+
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
+      <p><input class="w3-input w3-padding-16" type="email" placeholder="Email" required name="Email"></p>
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
+      <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
+      <p>
+        <button class="w3-button w3-light-grey w3-padding-large" type="submit">
+          <i class="fa fa-paper-plane"></i> SEND MESSAGE
+        </button>
+      </p>
+    </form>
+        </ul>
+      </div>
+    <!-- End Grid/Pricing tables -->
+  </div>
+	
+	
+	
+	
+	
+ 
+
+
+
+  <div class="w3-xlarge w3-section w3-center" data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
+    <a href="https://www.instagram.com/mirk_nft/?hl=en"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+     <a href=""><i class="fa fa-youtube w3-hover-opacity"></i></a>
+     <a href="https://twitter.com/Mirk_nft"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+	<br><br><br>
+  </div>
   
+
+
+</footer>
   
 
 
