--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@ min-height:100%;
   </div> 
   
 </header>
-  
-  
+
+
 <!-- what we offer -->
 <div data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
 <header class="bgimg-2 w3-display-container w3-grayscale-min" id="work">
@@ -279,9 +279,10 @@ min-height:100%;
   </div> 
   
 </header>
-  
-  
-  
+
+
+
+
 <!-- Prices-->
   <div class="w3-row-padding" id="pricing" style="margin-left:10%;margin-right:10%;margin-top:200px;margin-bottom:200px;">
     <div class="w3-center w3-padding-24">
@@ -337,7 +338,20 @@ min-height:100%;
   </div>
 
 
-   
+
+
+
+
+
+
+
+
+
+
+
+
+  
+  
 <!-- Footer -->
 <footer class=" w3-black w3-padding-64" id="contact"  data-aos="fade-in" data-aos-delay="50" data-aos-duration="2000">
 
@@ -348,7 +362,7 @@ min-height:100%;
 
 
 
-    <div class="w3-row-padding w3-hide-large "  style="margin:0 -16px">
+    <div class="w3-row-padding w3-hide-large "  >
       <div class="w3-half w3-margin-bottom">
         <ul class="w3-ul w3-black w3-left " style="padding-left:50px; padding-right:0px;" >
           <h2 class="w3-text-light-grey">Contact Us</h2>
@@ -384,7 +398,7 @@ min-height:100%;
     <!-- End Grid/Pricing tables -->
   </div>
 	
-	<div class="w3-row-padding w3-hide-small w3-hide-medium "  style="margin:0 -16px">
+	<div class="w3-row-padding w3-hide-small w3-hide-medium " >
       <div class="w3-half w3-margin-bottom">
         <ul class="w3-ul w3-black w3-left " style="padding-left:30%; padding-right:0px;" >
           <h2 class="w3-text-light-grey">Contact Us</h2>
@@ -438,7 +452,6 @@ min-height:100%;
 
 
 </footer>
-  
 
 
  <script>
