--- a/index.html
+++ b/index.html
@@ -378,9 +378,10 @@ min-height:100%;
 
       <div class="w3-half">
         <ul class="w3-ul w3-black w3-center " style="padding-left:50px; padding-right:50px;">
-          <p>Let's get in touch. Send me a message:</p>
+          <p>Let's get in touch. Send us a message:</p>
 <form action="https://formsubmit.co/anur3contact@gmail.com" method="POST">
 <input type="hidden" name="_captcha" value="false">
+<input type="hidden" name="_next" value="https://anur3.com/#contact">
 
 
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
@@ -417,6 +418,7 @@ min-height:100%;
           <p>Let's get in touch. Send me a message:</p>
 <form action="https://formsubmit.co/anur3contact@gmail.com" method="POST">
 <input type="hidden" name="_captcha" value="false">
+<input type="hidden" name="_next" value="https://anur3.com/#contact">
 
 
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
