--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@ min-height:100%;
 <form action="https://formsubmit.co/anur3contact@gmail.com" method="POST">
 <input type="hidden" name="_captcha" value="false">
 <input type="hidden" name="_next" value="https://anur3.com/#contact">
+<input type="hidden" name="_subject" value="New email for ANUR3!">
 
 
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name" style="border-radius: 10px;"></p>
@@ -420,6 +421,7 @@ min-height:100%;
 <form action="https://formsubmit.co/anur3contact@gmail.com" method="POST">
 <input type="hidden" name="_captcha" value="false">
 <input type="hidden" name="_next" value="https://anur3.com/#contact">
+<input type="hidden" name="_subject" value="New email for ANUR3!">
 
 
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name" style="border-radius: 10px;"></p>
