--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ margin-right:-10px;
 .bgimg-1 {
    background-position: center;
   background-size: cover;
-  background-image: url("bg5.jpg");
+  background-image: url("anur31.gif");
   min-height: 100%;
 }
 
@@ -183,14 +183,14 @@ min-height:100%;
 
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
-
+<!--
   <div class="w3-display-left w3-text-white" style="padding:48px; ">
   
     <span class="w3-jumbo w3-hide-small">STAND OUT FROM THE CROWD</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">STAND OUT FROM THE CROWD</span><br>
     <span class="w3-xlarge">UNLOCK your FULL potential with ANUR3</span><br>
     <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off" style="border-radius: 10px;">LEARN MORE</a></p>
-  </div> 
+  </div> -->
   
 </header>
 
