--- a/index.html
+++ b/index.html
@@ -227,6 +227,26 @@ min-height:100%;
   
 </nav>
 
+	
+
+<!-- Header with full-height image -->
+<header class="bgimg-1 w3-display-container w3-grayscale-min" id="home" style="z-index:2;">
+
+ <!-- <video playsinline autoplay muted loop poster="cake.jpg">
+    <source src="anur3.mp4" type="video/webm">
+    Your browser does not support the video tag.
+  </video>-->
+
+
+ <div class="w3-display-middle w3-text-white" style="padding:48px;">
+  
+    <span class="w3-jumbo w3-hide-small"><img src="log1.png" style="width:100%;"></span><br>
+    <span class=" w3-hide-large w3-hide-medium"><img src="log1.png" style="width:400px;"></span><br>
+
+</div>
+
+</header>
+
 
 
 
