--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ video {
   background-size: cover;
   background-color:black;
 
-  background-image: url("bg5.jpg");
+  background-image: url("bg7.png");
   min-height: 100%;
   text-align:center;
  
@@ -238,12 +238,12 @@ min-height:100%;
   </video>-->
 
 
- <div class="w3-display-middle w3-text-white" style="padding:48px;">
+<!-- <div class="w3-display-middle w3-text-white" style="padding:48px;">
   
     <span class="w3-jumbo w3-hide-small"><img src="log1.png" style="width:100%;"></span><br>
     <span class=" w3-hide-large w3-hide-medium"><img src="log1.png" style="width:250px;"></span><br>
 
-</div>
+</div>-->
 
 </header>
 
