--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ min-height:100%;
     <div class="w3-section">
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Bucharest, Romania</p>
       <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +40753753405</p>
-      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: anur3contact@gmail.com</p>
+      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: office.anur3@gmail.com</p>
     </div><br>
         </ul>
       </div>
@@ -483,7 +483,7 @@ min-height:100%;
       <div class="w3-half">
         <ul class="w3-ul w3-black w3-center " style="padding-left:0px; padding-right:30%;">
           <p>Let's get in touch. Send us a message:</p>
-<form action="https://formsubmit.co/anur3contact@gmail.com" method="POST">
+<form action="https://formsubmit.co/office.anur3@gmail.com" method="POST">
 <input type="hidden" name="_captcha" value="false">
 <input type="hidden" name="_next" value="https://anur3.com/#contact">
 <input type="hidden" name="_subject" value="New email for ANUR3!">
