--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ by your potential customers, and much more.">
         <div class="u-container-layout u-valign-top u-container-layout-1">
           <h2 class="u-text u-text-default u-text-1">Contact Us</h2>
           <div class="u-align-left u-form u-form-1">
-            <form action="https://formsubmit.co/office.anur3@email.com" method="POST" class="u-clearfix u-form-custom-backend u-form-spacing-28 u-form-vertical u-inner-form" style="padding: 10px" source="custom" name="form" redirect="true">
+            <form action="https://formsubmit.co/office.anur3@gmail.com" method="POST" class="u-clearfix u-form-custom-backend u-form-spacing-28 u-form-vertical u-inner-form" style="padding: 10px" source="custom" name="form" redirect="true">
               <div class="u-form-group u-form-name">
                 <label for="name-5a14" class="u-form-control-hidden u-label">Name</label>
                 <input type="text" placeholder="Enter your Name" id="name-5a14" name="name" class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-white" required="">
