--- a/Home.html
+++ b/Home.html
@@ -47,7 +47,7 @@
 <meta name="revisit-after" content="3 days">
 <meta name="author" content="ANUR3">
 </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-overlap u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-1b4d"><nav class="div1 u-align-right u-menu u-menu-hamburger u-menu-open-right u-offcanvas u-menu-1" data-responsive-from="XL">
+  <body class="u-body u-overlap u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-1b4d"><nav class="div1 u-align-right u-menu u-menu-hamburger u-menu-open-right u-offcanvas u-menu-1" data-responsive-from="XL">
         <div class="menu-collapse" style="font-size: 1.25rem; letter-spacing: 0px; font-weight: 500;">
           <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-file-icon u-nav-link u-text-active-palette-1-base u-text-custom-color-2 u-text-hover-palette-2-base u-file-icon-1" href="#">
             <img src="168214-82b48969.png" alt="">
