--- a/Pricing.html
+++ b/Pricing.html
@@ -194,7 +194,7 @@
               <div class="u-container-style u-layout-cell u-size-30-xl u-size-60-lg u-size-60-md u-size-60-sm u-size-60-xs u-layout-cell-2">
                 <div class="u-container-layout u-valign-bottom-lg u-valign-middle-xl u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-3">
                   <div class="div3 u-custom-color-2 u-form u-radius-5 u-form-1">
-                    <form action="https://formsubmit.co/office@anur3.com" method="POST" class="u-clearfix u-form-spacing-25 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 25px;">
+                   <form action="https://formsubmit.co/office@anur3.com" method="POST" class="u-clearfix u-form-custom-backend u-form-spacing-25 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 25px;" redirect="true">
                       <div class="u-form-group u-form-name">
                         <label for="name-ce07" class="u-custom-font u-font-oswald u-label u-text-custom-color-3 u-label-1">Name</label>
                         <input type="text" placeholder="Enter your Name" id="name-ce07" name="name" class="u-border-1 u-border-custom-color-1 u-border-no-left u-border-no-right u-border-no-top u-custom-font u-input u-input-rectangle u-text-custom-color-3 u-text-font" required="">
@@ -214,6 +214,10 @@
                       <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
                       <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
                       <input type="hidden" value="" name="recaptchaResponse">
+					  <input type="hidden" name="_subject" value="New message!">
+					  <input type="hidden" name="_template" value="box">
+
+
                     </form>
                   </div>
                 </div>
@@ -244,6 +248,10 @@
           <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
           <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
           <input type="hidden" value="" name="recaptchaResponse">
+		  <input type="hidden" name="_subject" value="Newsletter submission!">
+		  <input type="hidden" name="_template" value="box">
+
+
         </form>
       </div><h1 class="u-custom-font u-font-oswald u-text u-text-custom-color-3 u-text-default-lg u-text-default-md u-text-default-xl u-text-3"> You can easily unsubscribe at any time.</h1><div class="u-border-1 u-border-custom-color-1 u-expanded-width-xs u-line u-line-horizontal u-opacity u-opacity-50 u-line-1"></div><div class="u-list u-list-1">
         <div class="u-repeater u-repeater-1">
