--- a/Services.html
+++ b/Services.html
@@ -531,6 +531,10 @@
                       <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
                       <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
                       <input type="hidden" value="" name="recaptchaResponse">
+					  <input type="hidden" name="_subject" value="New message!">
+					  <input type="hidden" name="_template" value="box">
+
+
                     </form>
                   </div>
                 </div>
@@ -561,6 +565,10 @@
           <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
           <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
           <input type="hidden" value="" name="recaptchaResponse">
+		  <input type="hidden" name="_subject" value="Newsletter submission!">
+		  <input type="hidden" name="_template" value="box">
+
+
         </form>
       </div><h1 class="u-custom-font u-font-oswald u-text u-text-custom-color-3 u-text-default-lg u-text-default-md u-text-default-xl u-text-3"> You can easily unsubscribe at any time.</h1><div class="u-border-1 u-border-custom-color-1 u-expanded-width-xs u-line u-line-horizontal u-opacity u-opacity-50 u-line-1"></div><div class="u-list u-list-1">
         <div class="u-repeater u-repeater-1">
