--- a/Pricing.html
+++ b/Pricing.html
@@ -115,7 +115,7 @@
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-shape-rectangle u-size-20 u-size-20-md u-layout-cell-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-direction="">
                 <div class="u-container-layout u-valign-top u-container-layout-1">
                   <h4 class="u-custom-font u-font-oswald u-text u-text-custom-color-3 u-text-2">BASIC</h4>
-                  <h2 class="u-custom-font u-font-oswald u-text u-text-custom-color-1 u-text-3"> $200/month <s>$400/month</s></h2>
+                  <h2 class="u-custom-font u-font-oswald u-text u-text-custom-color-1 u-text-3"> $200/month <s><h6>$400/month</h6></s></h2>
                   <p class="u-custom-font u-font-oswald u-text u-text-4"><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;​​Modern and optimized website for any device​ - max. 3 pages (FREE)<br>
                     <br><span class="u-file-icon u-icon u-text-custom-color-1 u-icon-2"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;SEO &amp; PPC Services<br>
                     <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Copywriting<br>
@@ -127,7 +127,7 @@
               <div class="u-align-left u-container-style u-layout-cell u-shape-rectangle u-size-20 u-size-20-md u-layout-cell-2" data-animation-name="customAnimationIn" data-animation-duration="1000">
                 <div class="u-container-layout u-valign-top u-container-layout-2">
                   <h4 class="u-custom-font u-font-oswald u-text u-text-custom-color-3 u-text-5">STANDARD</h4>
-                  <h2 class="u-custom-font u-font-oswald u-text u-text-custom-color-1 u-text-6"> $300/month <s>$600/month</s></h2>
+                  <h2 class="u-custom-font u-font-oswald u-text u-text-custom-color-1 u-text-6"> $300/month <s><h6>$600/month</h6></s></h2>
                   <p class="u-custom-font u-font-oswald u-text u-text-7"><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;​​Modern and optimized website for any device​ - max. 5 pages (FREE)<br>
                     <br><span class="u-file-icon u-icon u-text-custom-color-1 u-icon-6"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;SEO &amp; PPC Services<br>
                     <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Copywriting<br>
@@ -140,7 +140,7 @@
               <div class="u-align-left u-container-style u-layout-cell u-right-cell u-shape-rectangle u-size-20 u-size-20-md u-layout-cell-3" data-animation-name="customAnimationIn" data-animation-duration="1000">
                 <div class="u-container-layout u-valign-top u-container-layout-3">
                   <h4 class="u-custom-font u-font-oswald u-text u-text-custom-color-3 u-text-8">PREMIUM</h4>
-                  <h2 class="u-custom-font u-font-oswald u-text u-text-custom-color-1 u-text-9"> $800/month <s>$1600/month</s></h2>
+                  <h2 class="u-custom-font u-font-oswald u-text u-text-custom-color-1 u-text-9"> $800/month <s><h6>$1600/month</h6></s></h2>
                   <p class="u-custom-font u-font-oswald u-text u-text-10"><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;​​Modern and optimized website for any device​ - blog or online store (FREE)<br>
                     <br><span class="u-file-icon u-icon u-text-custom-color-1 u-icon-11"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;SEO &amp; PPC Services<br>
                     <br><span class="u-file-icon u-icon u-text-custom-color-1"><img src="1055183-2b205a81.png" alt=""></span>&nbsp;Copywriting<br>
