--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="We will help you unlock your full potential with our services such as creating modern optimized websites, SEO, PPC, branding strategy, and more. ">
     <meta property="og:title" content="ANUR3 - Digital Marketing Agency">
     <meta property="og:description" content="We will help you unlock your full potential with our services such as creating modern optimized websites, SEO, PPC, branding strategy, and more. ">
-    <meta property="og:image" content="4.png">
+    <meta property="og:image" content="4.jpg">
     <meta property="og:url" content="www.anur3.com">
     <title>ANUR3 - Digital Marketing Agency</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
